--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,5 @@
 services:
+
   redis:
     image: redis:latest
     ports:
@@ -13,16 +14,24 @@ services:
       retries: 5
       start_period: 10s
 
-  rabbitmq:
-    image: rabbitmq:3-management
+  kafka:
+    image: bitnami/kafka:latest
     ports:
-      - "5672:5672"
-      - "15672:15672"
+      - "9092:9092"
+    environment:
+      - KAFKA_CFG_NODE_ID=0
+      - KAFKA_CFG_PROCESS_ROLES=controller,broker
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
+      - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
     networks:
       - app_network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "rabbitmqctl", "status"]
+      test: ["CMD", "kafka-topics.sh", "--bootstrap-server", "localhost:9092", "--list"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -37,7 +46,7 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - RABBITMQ_HOST=rabbitmq
+      - KAFKA_HOST=kafka
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - POSTGRES_HOST=${RDS_HOST}
@@ -52,7 +61,7 @@ services:
     depends_on:
       redis:
         condition: service_healthy
-      rabbitmq:
+      kafka:
         condition: service_healthy
     restart: unless-stopped
     healthcheck:
@@ -73,7 +82,7 @@ services:
     ports:
       - "8001:8000"
     environment:
-      - RABBITMQ_HOST=rabbitmq
+      - KAFKA_HOST=kafka
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - POSTGRES_HOST=${RDS_HOST}
@@ -86,7 +95,7 @@ services:
     depends_on:
       - whatsapp_webhook_service
       - redis
-      - rabbitmq
+      - kafka
     restart: unless-stopped
     networks:
       - app_network
@@ -100,7 +109,7 @@ services:
     ports:
       - "8002:8000"
     environment:
-      - RABBITMQ_HOST=rabbitmq
+      - KAFKA_HOST=kafka
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - POSTGRES_HOST=${RDS_HOST}
@@ -113,7 +122,7 @@ services:
     depends_on:
       - whatsapp_webhook_service
       - redis
-      - rabbitmq
+      - kafka
     restart: unless-stopped
     networks:
       - app_network
@@ -127,7 +136,7 @@ services:
     ports:
       - "8003:8000"
     environment:
-      - RABBITMQ_HOST=rabbitmq
+      - KAFKA_HOST=kafka
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - TWILIO_ACCOUNT_SID=${TWILIO_ACCOUNT_SID}
@@ -137,7 +146,7 @@ services:
     depends_on:
       - whatsapp_webhook_service
       - redis
-      - rabbitmq
+      - kafka
     restart: unless-stopped
     networks:
       - app_network
